edflib.h

struct edf_annotation_struct{                           
        long long onset;                                
        long long duration_l;                           
        char duration[16];                              
        char annotation[EDFLIB_MAX_ANNOTATION_LEN + 1]; 
       };
struct edf_hdr_struct{            
  int       handle;               
  int       filetype;             
  int       edfsignals;           
  long long file_duration;        
  int       startdate_day;
  int       startdate_month;
  int       startdate_year;
  long long starttime_subsecond;  
  int       starttime_second;
  int       starttime_minute;
  int       starttime_hour;
  char      patient[81];                                  
  char      recording[81];                                
  char      patientcode[81];                              
  char      gender[16];                                   
  char      birthdate[16];                                
  int       birthdate_day;                                
  int       birthdate_month;                              
  int       birthdate_year;
  char      patient_name[81];                             
  char      patient_additional[81];                       
  char      admincode[81];                                
  char      technician[81];                               
  char      equipment[81];                                
  char      recording_additional[81];                     
  long long datarecord_duration;                          
  long long datarecords_in_file;                          
  long long annotations_in_file;                          
  struct edf_param_struct signalparam[EDFLIB_MAXSIGNALS]; 
       };
int edfopen_file_readonly(const char *path, struct edf_hdr_struct *edfhdr, int read_annotations);
int edfread_physical_samples(int handle, int edfsignal, int n, double *buf);
int edfread_digital_samples(int handle, int edfsignal, int n, int *buf);
long long edfseek(int handle, int edfsignal, long long offset, int whence);
long long edftell(int handle, int edfsignal);
void edfrewind(int handle, int edfsignal);
int edf_get_annotation(int handle, int n, struct edf_annotation_struct *annot);
int edfclose_file(int handle);
int edflib_version(void);
int edflib_is_file_used(const char *path);
int edflib_get_number_of_open_files(void);
int edflib_get_handle(int file_number);
int edfopen_file_writeonly(const char *path, int filetype, int number_of_signals);
int edfopen_file_writeonly_with_params(const char *path, int filetype, int number_of_signals, int samplefrequency, double phys_max_min, const char *phys_dim);
int edf_set_samplefrequency(int handle, int edfsignal, int samplefrequency);
int edf_set_physical_maximum(int handle, int edfsignal, double phys_max);
int edf_set_physical_minimum(int handle, int edfsignal, double phys_min);
int edf_set_digital_maximum(int handle, int edfsignal, int dig_max);
int edf_set_digital_minimum(int handle, int edfsignal, int dig_min);
int edf_set_label(int handle, int edfsignal, const char *label);
int edf_set_prefilter(int handle, int edfsignal, const char *prefilter);
int edf_set_transducer(int handle, int edfsignal, const char *transducer);
int edf_set_physical_dimension(int handle, int edfsignal, const char *phys_dim);
int edf_set_startdatetime(int handle, int startdate_year, int startdate_month, int startdate_day,
                                      int starttime_hour, int starttime_minute, int starttime_second);