lib/src/bindings.dart

// ignore_for_file: type=lint

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// edflib: cross-platform library for reading and writing edf files
class EdfLib {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  EdfLib(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  EdfLib.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// the following functions are used to read files
  int open_file_readonly(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<EdfHdr> edfhdr,
    int read_annotations,
  ) {
    return _open_file_readonly(
      path,
      edfhdr,
      read_annotations,
    );
  }

  late final _open_file_readonlyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<EdfHdr>,
              ffi.Int)>>('edfopen_file_readonly');
  late final _open_file_readonly = _open_file_readonlyPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<EdfHdr>, int)>();

  int read_physical_samples(
    int handle,
    int edfsignal,
    int n,
    ffi.Pointer<ffi.Double> buf,
  ) {
    return _read_physical_samples(
      handle,
      edfsignal,
      n,
      buf,
    );
  }

  late final _read_physical_samplesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Double>)>>('edfread_physical_samples');
  late final _read_physical_samples = _read_physical_samplesPtr
      .asFunction<int Function(int, int, int, ffi.Pointer<ffi.Double>)>();

  int read_digital_samples(
    int handle,
    int edfsignal,
    int n,
    ffi.Pointer<ffi.Int> buf,
  ) {
    return _read_digital_samples(
      handle,
      edfsignal,
      n,
      buf,
    );
  }

  late final _read_digital_samplesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Int>)>>('edfread_digital_samples');
  late final _read_digital_samples = _read_digital_samplesPtr
      .asFunction<int Function(int, int, int, ffi.Pointer<ffi.Int>)>();

  int seek(
    int handle,
    int edfsignal,
    int offset,
    int whence,
  ) {
    return _seek(
      handle,
      edfsignal,
      offset,
      whence,
    );
  }

  late final _seekPtr = _lookup<
      ffi.NativeFunction<
          ffi.LongLong Function(
              ffi.Int, ffi.Int, ffi.LongLong, ffi.Int)>>('edfseek');
  late final _seek = _seekPtr.asFunction<int Function(int, int, int, int)>();

  int tell(
    int handle,
    int edfsignal,
  ) {
    return _tell(
      handle,
      edfsignal,
    );
  }

  late final _tellPtr =
      _lookup<ffi.NativeFunction<ffi.LongLong Function(ffi.Int, ffi.Int)>>(
          'edftell');
  late final _tell = _tellPtr.asFunction<int Function(int, int)>();

  void rewind(
    int handle,
    int edfsignal,
  ) {
    return _rewind(
      handle,
      edfsignal,
    );
  }

  late final _rewindPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
          'edfrewind');
  late final _rewind = _rewindPtr.asFunction<void Function(int, int)>();

  int get_annotation(
    int handle,
    int n,
    ffi.Pointer<EdfAnnotation> annot,
  ) {
    return _get_annotation(
      handle,
      n,
      annot,
    );
  }

  late final _get_annotationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.Int,
              ffi.Pointer<EdfAnnotation>)>>('edf_get_annotation');
  late final _get_annotation = _get_annotationPtr
      .asFunction<int Function(int, int, ffi.Pointer<EdfAnnotation>)>();

  /// the following functions are used in read and write mode
  int close_file(
    int handle,
  ) {
    return _close_file(
      handle,
    );
  }

  late final _close_filePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('edfclose_file');
  late final _close_file = _close_filePtr.asFunction<int Function(int)>();

  int version() {
    return _version();
  }

  late final _versionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('edflib_version');
  late final _version = _versionPtr.asFunction<int Function()>();

  int is_file_used(
    ffi.Pointer<ffi.Char> path,
  ) {
    return _is_file_used(
      path,
    );
  }

  late final _is_file_usedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'edflib_is_file_used');
  late final _is_file_used =
      _is_file_usedPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int get_number_of_open_files() {
    return _get_number_of_open_files();
  }

  late final _get_number_of_open_filesPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'edflib_get_number_of_open_files');
  late final _get_number_of_open_files =
      _get_number_of_open_filesPtr.asFunction<int Function()>();

  int get_handle(
    int file_number,
  ) {
    return _get_handle(
      file_number,
    );
  }

  late final _get_handlePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'edflib_get_handle');
  late final _get_handle = _get_handlePtr.asFunction<int Function(int)>();

  /// the following functions are used to write files
  int open_file_writeonly(
    ffi.Pointer<ffi.Char> path,
    int filetype,
    int number_of_signals,
  ) {
    return _open_file_writeonly(
      path,
      filetype,
      number_of_signals,
    );
  }

  late final _open_file_writeonlyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int,
              ffi.Int)>>('edfopen_file_writeonly');
  late final _open_file_writeonly = _open_file_writeonlyPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, int, int)>();

  int open_file_writeonly_with_params(
    ffi.Pointer<ffi.Char> path,
    int filetype,
    int number_of_signals,
    int samplefrequency,
    double phys_max_min,
    ffi.Pointer<ffi.Char> phys_dim,
  ) {
    return _open_file_writeonly_with_params(
      path,
      filetype,
      number_of_signals,
      samplefrequency,
      phys_max_min,
      phys_dim,
    );
  }

  late final _open_file_writeonly_with_paramsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Double,
              ffi.Pointer<ffi.Char>)>>('edfopen_file_writeonly_with_params');
  late final _open_file_writeonly_with_params =
      _open_file_writeonly_with_paramsPtr.asFunction<
          int Function(ffi.Pointer<ffi.Char>, int, int, int, double,
              ffi.Pointer<ffi.Char>)>();

  int set_samplefrequency(
    int handle,
    int edfsignal,
    int samplefrequency,
  ) {
    return _set_samplefrequency(
      handle,
      edfsignal,
      samplefrequency,
    );
  }

  late final _set_samplefrequencyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int, ffi.Int)>>(
          'edf_set_samplefrequency');
  late final _set_samplefrequency =
      _set_samplefrequencyPtr.asFunction<int Function(int, int, int)>();

  int set_physical_maximum(
    int handle,
    int edfsignal,
    double phys_max,
  ) {
    return _set_physical_maximum(
      handle,
      edfsignal,
      phys_max,
    );
  }

  late final _set_physical_maximumPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int, ffi.Double)>>(
      'edf_set_physical_maximum');
  late final _set_physical_maximum =
      _set_physical_maximumPtr.asFunction<int Function(int, int, double)>();

  int set_physical_minimum(
    int handle,
    int edfsignal,
    double phys_min,
  ) {
    return _set_physical_minimum(
      handle,
      edfsignal,
      phys_min,
    );
  }

  late final _set_physical_minimumPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int, ffi.Double)>>(
      'edf_set_physical_minimum');
  late final _set_physical_minimum =
      _set_physical_minimumPtr.asFunction<int Function(int, int, double)>();

  int set_digital_maximum(
    int handle,
    int edfsignal,
    int dig_max,
  ) {
    return _set_digital_maximum(
      handle,
      edfsignal,
      dig_max,
    );
  }

  late final _set_digital_maximumPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int, ffi.Int)>>(
          'edf_set_digital_maximum');
  late final _set_digital_maximum =
      _set_digital_maximumPtr.asFunction<int Function(int, int, int)>();

  int set_digital_minimum(
    int handle,
    int edfsignal,
    int dig_min,
  ) {
    return _set_digital_minimum(
      handle,
      edfsignal,
      dig_min,
    );
  }

  late final _set_digital_minimumPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int, ffi.Int)>>(
          'edf_set_digital_minimum');
  late final _set_digital_minimum =
      _set_digital_minimumPtr.asFunction<int Function(int, int, int)>();

  int set_label(
    int handle,
    int edfsignal,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _set_label(
      handle,
      edfsignal,
      label,
    );
  }

  late final _set_labelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int, ffi.Int, ffi.Pointer<ffi.Char>)>>('edf_set_label');
  late final _set_label =
      _set_labelPtr.asFunction<int Function(int, int, ffi.Pointer<ffi.Char>)>();

  int set_prefilter(
    int handle,
    int edfsignal,
    ffi.Pointer<ffi.Char> prefilter,
  ) {
    return _set_prefilter(
      handle,
      edfsignal,
      prefilter,
    );
  }

  late final _set_prefilterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int, ffi.Int, ffi.Pointer<ffi.Char>)>>('edf_set_prefilter');
  late final _set_prefilter = _set_prefilterPtr
      .asFunction<int Function(int, int, ffi.Pointer<ffi.Char>)>();

  int set_transducer(
    int handle,
    int edfsignal,
    ffi.Pointer<ffi.Char> transducer,
  ) {
    return _set_transducer(
      handle,
      edfsignal,
      transducer,
    );
  }

  late final _set_transducerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int, ffi.Int, ffi.Pointer<ffi.Char>)>>('edf_set_transducer');
  late final _set_transducer = _set_transducerPtr
      .asFunction<int Function(int, int, ffi.Pointer<ffi.Char>)>();

  int set_physical_dimension(
    int handle,
    int edfsignal,
    ffi.Pointer<ffi.Char> phys_dim,
  ) {
    return _set_physical_dimension(
      handle,
      edfsignal,
      phys_dim,
    );
  }

  late final _set_physical_dimensionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Char>)>>('edf_set_physical_dimension');
  late final _set_physical_dimension = _set_physical_dimensionPtr
      .asFunction<int Function(int, int, ffi.Pointer<ffi.Char>)>();

  int set_startdatetime(
    int handle,
    int startdate_year,
    int startdate_month,
    int startdate_day,
    int starttime_hour,
    int starttime_minute,
    int starttime_second,
  ) {
    return _set_startdatetime(
      handle,
      startdate_year,
      startdate_month,
      startdate_day,
      starttime_hour,
      starttime_minute,
      starttime_second,
    );
  }

  late final _set_startdatetimePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.Int,
              ffi.Int)>>('edf_set_startdatetime');
  late final _set_startdatetime = _set_startdatetimePtr
      .asFunction<int Function(int, int, int, int, int, int, int)>();

  int set_patientname(
    int handle,
    ffi.Pointer<ffi.Char> patientname,
  ) {
    return _set_patientname(
      handle,
      patientname,
    );
  }
